Update gitignore, Add audio assets

--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <body>
         <button onclick="myFunction()">Press Me!</button>
         <p id="wot">This text should change</p>
+
+        <audio
+            id="thunder-sample-1"
+            controls
+            src="./assets/relaxing_rain_thunder.MP3">
+        </audio>
     </body>
 </html>
 <script type="text/javascript" src="main.jsg"></script>
