P5.js powered rumble detection

--- a/index.html
+++ b/index.html
@@ -4,14 +4,9 @@
         <title>Hello World!</title>
     </head>
     <body>
-        <button onclick="myFunction()">Press Me!</button>
-        <p id="wot">This text should change</p>
-
-        <audio
-            id="thunder-sample-1"
-            controls
-            src="./assets/relaxing_rain_thunder.MP3">
-        </audio>
+        <div></div>
     </body>
+    <script src="https://cdn.jsdelivr.net/npm/p5@0.10.2/lib/p5.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/p5@0.10.2/lib/addons/p5.sound.js"></script>
+    <script type="text/javascript" src="sketch.js"></script>
 </html>
-<script type="text/javascript" src="main.jsg"></script>
